Payment page has been updated with two more tabs

--- a/roga91/Frontend/payment.html
+++ b/roga91/Frontend/payment.html
@@ -24,8 +24,11 @@
                         <button class="tab-btn active" data-tab="donation">
                             💝 Donation
                         </button>
-                        <button class="tab-btn" data-tab="dues">
-                            💳 Dues
+                            <button class="tab-btn" data-tab="roga91_dues">
+                            🏛️ ROGA 91 Dues
+                        </button>
+                        <button class="tab-btn" data-tab="roga_national_dues">
+                            🇳🇬 ROGA National Dues
                         </button>
                     </div>
                 </div>
