The details of the financial secretry have been added

--- a/roga91/Frontend/event.html
+++ b/roga91/Frontend/event.html
@@ -18,8 +18,8 @@
       <a href="about.html">About Us</a>
       <a href="#">Gallery</a>
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rogaset91@gmail.com" target="_blank">Contact Us</a>
-      <a href="#">Give to ROGA91</a>
-      <button class="header-cta">Get Involved</button>
+      <a href="payment.html">Give to ROGA91</a>
+      <button class="header-cta"><a href="payment.html"> Get Involved</a></button>
     </nav>
 
     <h1>Upcoming Events</h1>
