--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -19,7 +19,7 @@
             <a href="event.html">Events</a>
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rogaset91@gmail.com" target="_blank">Contact Us</a>
             <a href="payment.html">Give to Roga91</a>
-            <button class="header-cta">Get Involved</button>
+            <button class="header-cta"><a href="payment.html">Get Involved</a></button>
         </nav>
     </header>
 
@@ -27,7 +27,7 @@
         <div class="text">
         <h1>Welcome to Our Class Communtiy</h1>
         <h2>Celebrating over three decades of friendship,achievment and shared memories.
-            Our dedicated Executive team works tirelessly to keep our Reagan High SchoolClass of 1991 COnnected and thriving
+            Our dedicated Executive team works tirelessly to keep our Reagan High School Class of 1991 Connected and thriving
         </h2>
 </div>
         <div class="cta">
@@ -97,16 +97,13 @@
 Olubunmi Adetinuke Adeleke, born on September 28, 1973, in Lagos, attended Our Lady of Apostle Primary School and Reagan Memorial Baptist Girls’ School, Yaba. She earned a degree in Social Studies from Ekiti State University (1995–1999). Married to Mr. Adewale Adeleke, they have six children—three biological and three adopted. A successful caterer and event planner, Olubunmi is known for her strong organizational and interpersonal skills, as well as her compassionate, nurturing approach.</p>
             </div>
              <div class="cards">
-                    <img src="" alt="A picture of the current Financial Secretary">
+                    <img src="images/financial secretary.webp" alt="A picture of the current Financial Secretary">
                 <div>
-                    <h5>Executive Name</h5>
+                    <h5>Aderonke Kuyebi</h5>
                     <p><span>Financial Secretary</span></p>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur
-                     adipisicing elit. Tempore, quas, suscipit
-                      voluptates ullam iure quae, dolorum deleniti ipsum 
-                      earum quibusdam voluptatum architecto at illo doloremque
-                       animi nisi quia eum laudantium?</p>
+                <p>Aderonke Kuyebi (nee Akiyode) was born on the 5th of July 1974. She attended Our Lady of Apostles primary school between 1979 and 1985.  She attended Reagan Memorial Baptist Girls secondary school Yaba between 1985 - 1988. Also, attended Abeokuta Grammar school between 1989 - 1992. She later graduated from Lagos State University Faculty of Education with a degree in English education, and also did her Masters degree in public administration in the same university.
+She's happily married and blessed with children.</p>
             </div>
         </div>
     </section>
@@ -156,6 +153,13 @@ A certified Hotline Master Trainer and International Volunteer, Tolulope is a fe
 
     </section>
    <footer>
+    <div>
+       CONTACT US @
+📞:0701 914 2589
+📩:roga91alumni@gmail.com 
+IG: Roga91alumni
+FB: Reagan Old  Girls Association 91 set 
+    </div>
   <p><strong>Reagan Old Girls Association Set Of 1991</strong></p>
   <p>Keeping the legacy and sisterhood alive.</p>
   <p>&copy; 2025 ROGA91. All rights reserved.</p>
