Some spelling erros have been corrected

--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -49,10 +49,10 @@
            <div class="cards">
                     <img src="images/Roga president.webp" alt="A picture of the current President">
                 <div>
-                    <h5>Kofoworola Oyewola</h5>
+                    <h5>Kofoworola Oyewole</h5>
                     <p><span>President</span></p>
                 </div>
-                <p>Kofoworola Oyewole born on 7th February. Attended University of Lagos Staff School btw 1979 and 1985. Proceeded to Reagan Memorial Baptist Girls Secondary School btw 1985 and 1991. Attended Broward College and Florida Atlantic University with a Bachelors a Registered Nurse, a member of the board of trustee of Okeya Ipo Diaspora (Kwara State). Married with 4 kids</p>
+                <p>Kofoworola Oyewole born on 7th February. Attended University of Lagos Staff School between 1979 and 1985. Proceeded to Reagan Memorial Baptist Girls Secondary School between 1985 and 1991. Attended Broward College and Florida Atlantic University with a Bachelors, a Registered Nurse, a member of the board of trustees of Okeya Ipo Diaspora (Kwara State). Married with 4 kids</p>
             </div>
             <div class="cards">
                     <img src="images/vice president.webp" alt="A picture of the current Vice President">
@@ -67,7 +67,7 @@
                     <img src="images/mary akpo.webp" alt="A picture of the current Public Relations Officer">
                 <div>
                     <h5>Mary Akoh</h5>
-                    <p><span>Public relations Officer</span></p>
+                    <p><span>Public Relations Officer</span></p>
                 </div>
                 <p>Mary Akoh, born on May 1, 1973, attended Our Lady of Apostles Primary School (1979–1985) and Reagan Memorial Baptist Girls’ Secondary School, Yaba (1985–1991). She earned a B.Sc. in Sociology from the University of Lagos and an MPA from Lagos State University (2004–2006). A member of the Association of Enterprise Risk Management Professionals since 2017, she is married with four children.</p>
             </div>
