--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Welcome to the Reagan Memorial Baptist Girls’ School Class of 1991 alumni page. Stay connected, explore upcoming events, meet our executive and electoral teams, and join a vibrant community celebrating decades of sisterhood and shared memories.">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="images/logo.webp">
