--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -19,7 +19,7 @@
             <a href="about.html">About us</a>
             <a href="#">Gallery</a>
             <a href="event.html">Events</a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rogaset91@gmail.com" target="_blank">Contact Us</a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=roga91alumni@gmail.com" target="_blank">Contact Us</a>
             <a href="payment.html">Give to Roga91</a>
             <button class="header-cta"><a href="payment.html">Get Involved</a></button>
         </nav>
