--- a/roga91/Frontend/about.html
+++ b/roga91/Frontend/about.html
@@ -17,7 +17,7 @@
       <a href="index.html">Home</a>
       <a href="#">About Us</a>
       <a href="#">Gallery</a>
-      <a href="#">Events</a>
+      <a href="event.html">Events</a>
       <a href="#">Contact</a>
       <button class="header-cta">Get Involved</button>
     </nav>
