--- a/roga91/Frontend/success.html
+++ b/roga91/Frontend/success.html
@@ -22,7 +22,7 @@
                 <p>📧 A confirmation email has been sent to your registered email address.</p>
             </div>
             
-            <a href="index.html" class="action-btn">Make Another Payment</a>
+            <a href="index.html" class="action-btn">Return to Home</a>
             
             <p style="margin-top: 1rem; font-size: 0.75rem; color: #6b7280;">
                 For any inquiries, please contact ROGA 91 support.
