--- a/roga91/Frontend/about.html
+++ b/roga91/Frontend/about.html
@@ -18,7 +18,7 @@
       <a href="#">About Us</a>
       <a href="#">Gallery</a>
       <a href="event.html">Events</a>
-      <a href="#">Contact</a>
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=roga91alumni@gmail.com">Contact</a>
       <button class="header-cta">Get Involved</button>
     </nav>
   </header>
