--- a/roga91/Frontend/about.html
+++ b/roga91/Frontend/about.html
@@ -19,7 +19,7 @@
       <a href="#">Gallery</a>
       <a href="event.html">Events</a>
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=roga91alumni@gmail.com">Contact</a>
-      <button class="header-cta">Get Involved</button>
+      <button class="header-cta"><a href="payment.html">Get Involved</a></button>
     </nav>
   </header>
 
