--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -149,7 +149,7 @@ A certified Hotline Master Trainer and International Volunteer, Tolulope is a fe
         <a href="https://forms.gle/C3wyXWUCmRYHqkDS6" target="_blank" rel="noopener noreferrer">
   <button>Update Your Info</button>
 </a>
-    <button onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=rogaset91@gmail.com', '_blank')">
+    <button onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=roga91alumni@gmail.com', '_blank')">
   Contact Us
 </button>
 
