--- a/roga91/Frontend/event.html
+++ b/roga91/Frontend/event.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="event.css">
   <link rel="icon" type="image/x-icon" href="images/logo.webp"> 
   <title>Upcoming Events</title>
