--- a/roga91/Frontend/event.html
+++ b/roga91/Frontend/event.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Explore upcoming events for ROGA91 – Reagan Memorial Baptist Girls’ School Class of 1991. Stay updated on reunions, gatherings
+  <meta name="description" content="Explore upcoming events for ROGA91 – Reagan Memorial Baptist Girls’ School Class of 1991. Stay updated on reunions, gatherings">
 
   <link rel="stylesheet" href="event.css">
   <link rel="icon" type="image/x-icon" href="images/logo.webp"> 
