--- a/roga91/Frontend/payment.html
+++ b/roga91/Frontend/payment.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Securely make payments for ROGA91 events, dues, and contributions. Support the Reagan Memorial Baptist Girls’ School Class of 1991 and stay involved in our growing alumni community.">
+
     <title>ROGA 91 - Payment Portal</title>
     <link rel="stylesheet" href="payment.css">
     <link rel="icon" type="image/x-icon" href="images/logo.webp">
