Another member had been added

--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -143,6 +143,16 @@ A certified Hotline Master Trainer and International Volunteer, Tolulope is a fe
             </div>
         </div>
     </section>
+    <section class="ex">
+         <div class="card">
+                <img src="images/ex_official_member.webp" alt="A picture of a member of an Ex Official member">
+                <div>
+                    <h5>Oluwakemi Ituen</h5>
+                    <p><span>Ex Official Member</span></p>
+                </div>
+                <p>Oluwakemi Adebukola Ituen nee Balogun. I graduated from Reagan memorial Baptist girls secondary school, yaba in 1991. I proceeded to the university of Ibadan where I obtained a degree in Physiotherapy. I currently live in Uyo Akwa Ibom state with my family where I practice as a pediatric Physiotherapist.</p>
+             </div>
+    </section>
     <section class="stayConnected">
         <h6>Stay Connected</h6>
         <p>Join your classmates in our growing alumni Network</p>
