--- a/roga91/Frontend/gallery.html
+++ b/roga91/Frontend/gallery.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Browse the photo gallery of the Reagan Memorial Baptist Girls’ School Class of 1991 alumni. Relive unforgettable moments, events, and celebrations that highlight our enduring sisterhood and shared memories.">
+
     <link rel="stylesheet" href="gallery.css">
+    <link rel="icon" type="image/x-icon" href="images/logo.webp">
     <title>Gallery</title>
 </head>
 <body>
