--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -27,44 +27,139 @@
   <!-- Everything else stays the same but with all <img> tags updated like below: -->
   
   <section class="executives">
-    <h3>Meet our Executive Team</h3>
-    <!-- First card example -->
-    <div class="execs">
-      <div class="cards">
-        <img src="images/Roga president.webp" alt="A picture of the current President" draggable="false">
-        <!-- ... rest of card content ... -->
-      </div>
-      <div class="cards">
-        <img src="images/vice president.webp" alt="A picture of the current Vice President" draggable="false">
-        <!-- ... -->
-      </div>
-      <!-- Repeat this for all other image cards -->
-    </div>
-  </section>
+        <h3>Meet our Executive Team</h3>
+        <h4>Our dedicated leaders who volunteer their time to keep our class connected,
+            organized and moving forward together
+        </h4>
+        <div class="execs">
+           <div class="cards">
+                    <img src="images/Roga president.webp" alt="A picture of the current President">
+                <div>
+                    <h5>Kofoworola Oyewole</h5>
+                    <p><span>President</span></p>
+                </div>
+                <p>Kofoworola Oyewole born on 7th February. Attended University of Lagos Staff School between 1979 and 1985. Proceeded to Reagan Memorial Baptist Girls Secondary School between 1985 and 1991. Attended Broward College and Florida Atlantic University with a Bachelors, a Registered Nurse, a member of the board of trustees of Okeya Ipo Diaspora (Kwara State). Married with 4 kids</p>
+            </div>
+            <div class="cards">
+                    <img src="images/vice president.webp" alt="A picture of the current Vice President">
+                <div>
+                    <h5>Kemi Lawal</h5>
+                    <p><span>Vice President</span></p>
+                </div>
+                <p>Oluwakemi Adetutu Lawal, born April 20, 1973, is a passionate advocate for the environment with a background in Physics from the University of Ibadan. She began her career as a flight attendant, traveling globally for a decade before returning to her first love—gardening. Now an entrepreneur in health, wellness, and regenerative agriculture, Kemi also serves in environmental public service and is a committed Rotarian known for her dedication to sustainability and community service.</p>
+            </div>
 
-  <!-- Footer and buttons -->
-  <section class="stayConnected">
-    <h6>Stay Connected</h6>
-    <p>Join your classmates in our growing alumni Network</p>
-    <a href="https://forms.gle/C3wyXWUCmRYHqkDS6" target="_blank" rel="noopener noreferrer">
-      <button>Update Your Info</button>
-    </a>
-    <button onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=roga91alumni@gmail.com', '_blank')">Contact Us</button>
-  </section>
+            <div class="cards">
+                    <img src="images/mary akpo.webp" alt="A picture of the current Public Relations Officer">
+                <div>
+                    <h5>Mary Akoh</h5>
+                    <p><span>Public Relations Officer</span></p>
+                </div>
+                <p>Mary Akoh, born on May 1, 1973, attended Our Lady of Apostles Primary School (1979–1985) and Reagan Memorial Baptist Girls’ Secondary School, Yaba (1985–1991). She earned a B.Sc. in Sociology from the University of Lagos and an MPA from Lagos State University (2004–2006). A member of the Association of Enterprise Risk Management Professionals since 2017, she is married with four children.</p>
+            </div>
+            <div class="cards">
+                <img src="images/secretary.webp" alt="A picture of the current Secretary">
+                <div>
+                    <h5>Adebukola Adisa</h5>
+                    <p><span>Secretary</span></p>
+                </div>
+                <p>Adebukola Adisa born on the 21st December 1974.Attended Anglican primary school btw 1979 and 1985.Proceeded to Reagan Memorial Baptist Girls secondary school Yaba btw 1985-1991.Attended Benue state University where she obtained Diploma in Theatre Arts ,IATA/UFTAA Foundation & Stepping into Management Course & University of Ibadan a Distinction in Sociology. A seasoned Travel Consultant.</p>
+            </div>
+            <div class="cards">
+                    <img src="images/Olanrewaju abe.webp" alt="A picture of the current Treasurer">
+                <div>
+                    <h5>Olanrewaju Abe</h5>
+                    <p><span>Treasurer</span></p>
+                </div>
+                <p>Olanrewaju Abe, born on February 8, 1971, attended Our Lady of Apostles Primary School (1979–1985) and Reagan Memorial Baptist Girls' Secondary School, Yaba (1985–1991). She holds a Second Class Upper degree in Accounting from Ogun State University. A Fellow of ICAN and an Associate of the Institute of Taxation, she is married with three children.</p>
+            </div> <div class="cards">
+                    <img src="images/welfare officer.webp" alt="A picture of the current Welfare Officer">
+                <div>
+                    <h5>Olubunmi Adetinuke Adeleke</h5>
+                    <p><span>Welfare Officer</span></p>
+                </div>
+                <p>
 
-  <footer>
+Olubunmi Adetinuke Adeleke, born on September 28, 1973, in Lagos, attended Our Lady of Apostle Primary School and Reagan Memorial Baptist Girls’ School, Yaba. She earned a degree in Social Studies from Ekiti State University (1995–1999). Married to Mr. Adewale Adeleke, they have six children—three biological and three adopted. A successful caterer and event planner, Olubunmi is known for her strong organizational and interpersonal skills, as well as her compassionate, nurturing approach.</p>
+            </div>
+             <div class="cards">
+                    <img src="images/financial secretary.webp" alt="A picture of the current Financial Secretary">
+                <div>
+                    <h5>Aderonke Kuyebi</h5>
+                    <p><span>Financial Secretary</span></p>
+                </div>
+                <p>Aderonke Kuyebi (nee Akiyode) was born on the 5th of July 1974. She attended Our Lady of Apostles primary school between 1979 and 1985.  She attended Reagan Memorial Baptist Girls secondary school Yaba between 1985 - 1988. Also, attended Abeokuta Grammar school between 1989 - 1992. She later graduated from Lagos State University Faculty of Education with a degree in English education, and also did her Masters degree in public administration in the same university.
+She's happily married and blessed with children.</p>
+            </div>
+        </div>
+    </section>
+    <section class="electoral">
+        <h3>Meet our Electoral Team</h3>
+        <div class="execs">
+               <div class="cards">
+                    <img src="images/Electoral committee chairlady.webp" alt="A picture of the current Electoral Commitee Charilady">
+                <div>
+                    <h5>Dorcas Olayinka Agbaje</h5>
+                    <p><span>Electoral Chairlady</span></p>
+                </div>
+                <p>Dorcas Olayinka Agbaje, born on September 26, 1974, holds a degree in Geography from Benue State University and diplomas in Secretarial Administration and Business Studies from UK institutions. She later earned a distinction in Psychiatric Nursing from Brandon University, Canada, and is a registered psychiatric nurse in Manitoba. She is a dedicated professional and single mother of one.</p>
+            </div>
+               <div class="cards">
+                    <img src="images/electoral commitee.webp" alt="A picture of the member of the current Electoral Commitee">
+                <div>
+                    <h5>Oluwafemi Fatokun</h5>
+                    <p><span>Electoral Commitee</span></p>
+                </div>
+                 <p>Oluwafemi Fatokun (née Ojomo), born on April 25, attended the University of Lagos Staff School and is a proud alumna of Reagan Memorial Baptist Girls’ School, Class of 1991. She holds a B.Sc. in Banking and Finance from EKSU (formerly OSUA). After gaining experience in the finance sector, she transitioned into the textile industry, where she has thrived as a dedicated merchant for the past 18 years. She is married and blessed with children.</p>
+                </div>
+              
+            <div class="cards">
+                <img src="images/commitee member2.webp" alt="A picture of a member of the current Electoral Committee">
+                <div>
+                    <h5>Tolulope Osoba</h5>
+                    <p><span>Committee Member</span></p>
+                </div>
+                <p>Tolulope Osoba, born on November 19, attended Army Children School and Reagan Memorial Baptist Girls’ Secondary School (1985–1991).
+
+She holds a degree in Psychology from Ondo State University and a Master’s in Social Work from Lagos State University, with certification in Medical/Psychiatric Social Work.
+
+A certified Hotline Master Trainer and International Volunteer, Tolulope is a fellow of WSLA (Chichester) and SLDP (Nigeria). She enjoys music, travel, dance, and martial arts..</p>
+            </div>
+        </div>
+    </section>
+    <section class="ex">
+         <div class="card">
+                <img src="images/ex_official_member.webp" alt="A picture of a member of an Ex Official member">
+                <div>
+                    <h5>Oluwakemi Ituen</h5>
+                    <p><span>Ex Official Member</span></p>
+                </div>
+                <p>Oluwakemi Adebukola Ituen nee Balogun. I graduated from Reagan memorial Baptist girls secondary school, yaba in 1991. I proceeded to the university of Ibadan where I obtained a degree in Physiotherapy. I currently live in Uyo Akwa Ibom state with my family where I practice as a pediatric Physiotherapist.</p>
+             </div>
+    </section>
+    <section class="stayConnected">
+        <h6>Stay Connected</h6>
+        <p>Join your classmates in our growing alumni Network</p>
+        <a href="https://forms.gle/C3wyXWUCmRYHqkDS6" target="_blank" rel="noopener noreferrer">
+  <button>Update Your Info</button>
+</a>
+    <button onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=roga91alumni@gmail.com', '_blank')">
+  Contact Us
+</button>
+
+    </section>
+   <footer>
     <div>
-      CONTACT US @<br>
-      📞:0701 914 2589<br>
-      📩:roga91alumni@gmail.com <br>
-      IG: Roga91alumni<br>
-      FB: Reagan Old Girls Association 91 set 
+       CONTACT US @
+📞:0701 914 2589
+📩:roga91alumni@gmail.com 
+IG: Roga91alumni
+FB: Reagan Old  Girls Association 91 set 
     </div>
-    <p><strong>Reagan Old Girls Association Set Of 1991</strong></p>
-    <p>Keeping the legacy and sisterhood alive.</p>
-    <p>&copy; 2025 ROGA91. All rights reserved.</p>
-  </footer>
-
+  <p><strong>Reagan Old Girls Association Set Of 1991</strong></p>
+  <p>Keeping the legacy and sisterhood alive.</p>
+  <p>&copy; 2025 ROGA91. All rights reserved.</p>
+</footer>
   <!-- JavaScript to disable right-click on images -->
   <script>
     document.addEventListener('contextmenu', function (e) {
