--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -24,7 +24,22 @@
     </nav>
   </header>
 
-  <!-- Everything else stays the same but with all <img> tags updated like below: -->
+  <section class="hero">
+        <div class="text">
+        <h1>Welcome to Our Class Communtiy</h1>
+        <h2>Celebrating over three decades of friendship,achievment and shared memories.
+            Our dedicated Executive team works tirelessly to keep our Reagan High School Class of 1991 Connected and thriving
+        </h2>
+</div>
+        <div class="cta">
+        <a href="https://forms.gle/C3wyXWUCmRYHqkDS6" target="_blank" rel="noopener noreferrer">
+  <button class="button1">Join Our Network</button>
+</a>
+<a href="event.html">
+            <button class="button2" onclick="window.location.href='event.html'">Upcoming Events</button>
+       </a>
+        </div>
+    </section>
   
   <section class="executives">
         <h3>Meet our Executive Team</h3>
