--- a/roga91/Frontend/event.html
+++ b/roga91/Frontend/event.html
@@ -28,6 +28,17 @@
   </header>
 
   <div class="container">
+    <div class="event">
+      <img src="events/girlChild_flyer.jpg" alt="An upcoming event for ROGA91" class="event-img">
+
+      <h2>Celebration of the International Day of the Girl Child</h2>
+      <p class="date">
+        <img src="icons/calendar (2).png" alt="Calendar icon" class="icon">
+        13th October,2025</p>
+ <p>
+        Join us for the celebration of the International Day of the Girl Child  at Yaba Baptist Chirch,Sabo Yaba,Lagos.
+      </p>
+    </div>
 
     <div class="event">
       <h2>AGM / Inauguration</h2>
