The image was converted to webp

--- a/roga91/Frontend/event.html
+++ b/roga91/Frontend/event.html
@@ -29,7 +29,7 @@
 
   <div class="container">
     <div class="event">
-      <img src="events/girlChild_flyer.jpg" alt="An upcoming event for ROGA91" class="event-img">
+      <img src="events/girlChild_flyer.webp" alt="An upcoming event for ROGA91" class="event-img">
 
       <h2>Celebration of the International Day of the Girl Child</h2>
       <p class="date">
