corrected typographic error

--- a/roga91/Frontend/event.html
+++ b/roga91/Frontend/event.html
@@ -36,7 +36,7 @@
         <img src="icons/calendar (2).png" alt="Calendar icon" class="icon">
         13th October,2025</p>
  <p>
-        Join us for the celebration of the International Day of the Girl Child  at Yaba Baptist Chirch,Sabo Yaba,Lagos.
+        Join us for the celebration of the International Day of the Girl Child  at Yaba Baptist Church,Sabo Yaba,Lagos.
       </p>
     </div>
 
