--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -40,6 +40,30 @@
        </a>
         </div>
     </section>
+  <section class="christmas-greeting">
+  <div class="christmas-content">
+    <div class="christmas-text">
+      <h2>Merry Christmas 🎄</h2>
+      <p>
+        Wishing all members of the Reagan Old Girls Association, Class of 1991,
+        a joyful Christmas filled with love, peace, good health, and cherished moments
+        with family and friends.
+      </p>
+      <p>
+        Thank you for your continued support, unity, and commitment to keeping
+        our sisterhood strong.
+      </p>
+      <h4>— From the ROGA 91 Executive Team</h4>
+    </div>
+
+    <div class="christmas-flyer">
+      <img src="images/roga91-christmas-flyer.webp" 
+           alt="ROGA 91 Merry Christmas Flyer" 
+           draggable="false">
+    </div>
+  </div>
+</section>
+
   
   <section class="executives">
         <h3>Meet our Executive Team</h3>
