Change Christmas flyer image format from webp to png

--- a/roga91/Frontend/index.html
+++ b/roga91/Frontend/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="christmas-flyer">
-      <img src="images/roga91-christmas-flyer.webp" 
+      <img src="images/roga91-christmas-flyer.png" 
            alt="ROGA 91 Merry Christmas Flyer" 
            draggable="false">
     </div>
